fix typo in hobby.html

--- a/hobby.html
+++ b/hobby.html
@@ -48,7 +48,7 @@
         <title>Hobby</title>
 </head>
 <p>I currently compete for the <a href=https://www.grcrunning.com/eric-beyerle/>Georgetown Running Club</a> located in Washington, D.C. I previously competed for the <a href=https://www.uorunning.com>University of Oregon club team</a> from 2015 to 2021 and competed collegiately for <a href=https://www.tfrrs.org/athletes/3736586/Centre/Eric_Beyerle>Centre College</a> at the NCAA DIII level </p>
-<p>Most of my training from college is available on my <a href="https://running2win.com/">Running2Win profile</a> (you will need to create an account ot access). Training from 2019 to present is available on <a href="https://www.strava.com/athletes/35718086">Strava</a>, for the most part. I'll try to move my log to this page in the near future (typed out 28 April 2024).</p>
+<p>Most of my training from college is available on my <a href="https://running2win.com/">Running2Win profile</a> (you will need to create an account to access). Training from 2019 to present is available on <a href="https://www.strava.com/athletes/35718086">Strava</a>, for the most part. I'll try to move my log to this page in the near future (typed out 28 April 2024).</p>
 
 <a href="index.html">Back to Homepage</a>
 
