--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ a:active {
         <a href="https://github.com/erb24">GitHub</a><br><br>
         <a href="https://www.linkedin.com/in/eric-beyerle-95444bbb/">LinkedIn</a><br><br>
         <a href="https://www.strava.com/athletes/35718086">Strava</a><br><br>
+	<a href="https://ebeyerle.blogspot.com/">Blog</a><br><br>
 
 </body>
 </HTML>
