--- a/news.html
+++ b/news.html
@@ -13,6 +13,13 @@
 <body style='margin-top:0;margin-left:200;margin-right:200;'>
 
 <h2 style="color:black">
+June 2024
+</h2>
+<ol>
+<li style="color:black"> My co-first author paper on comparing the SPIB method to MSM standards for ultralong protein folding trajectories has been published in <a href="https://pubs.acs.org/doi/10.1021/acs.jctc.4c00449"><em>The Journal of Chemical Theory and Computation</em></a>.
+</li>	
+</ol>
+<h2 style="color:black">
 April 2024
 </h2>
 <ol>
