--- a/hobby.html
+++ b/hobby.html
@@ -48,7 +48,17 @@
         <title>Hobby</title>
 </head>
 <p>I currently compete for the <a href=https://www.grcrunning.com/eric-beyerle/>Georgetown Running Club</a> located in Washington, D.C. I previously competed for the <a href=https://www.uorunning.com>University of Oregon club team</a> from 2015 to 2021 and competed collegiately for <a href=https://www.tfrrs.org/athletes/3736586/Centre/Eric_Beyerle>Centre College</a> at the NCAA DIII level </p>
-<p>Most of my training from college is available on my <a href="https://running2win.com/">Running2Win profile</a> (you will need to create an account to access). Training from 2019 to present is available on <a href="https://www.strava.com/athletes/35718086">Strava</a>, for the most part. I'll try to move my log to this page in the near future (typed out 28 April 2024).</p>
+<p>Most of my training from college is available on my <a href="https://running2win.com/">Running2Win profile</a> (you will need to create an account to access). Training from 2019 to present is available on <a href="https://www.strava.com/athletes/35718086">Strava</a>, for the most part. I'll try to move my log to this page in the near future (typed out 28 April 2024; the move will likely coincide with the expiration of my postdoctoral contract at the University of Maryland, College Park on 31 August 2024).</p>
+
+<h1>News</h1>
+<h2> June 2024</h2>
+<ol>
+<li> I had a PRP injection performed at the insertion of my left Achilles tendon on 6 June 2024 after a diagnosis of a low-grade, partial, longitudinal tear from the insertion of the tendon to the midsubstance. The optimistic timeline for a return to running is 6 weeks, although, given the 3+ year history of this injury, and since the origins (chronic or acute?) are still unknown, I expect, unfortunately, it could be a while before everything is fully sorted.</li>
+</ol>
+<h2>April 2024</h2>
+<ol>
+<li> I ran a personal best of 14:24.90 in 5000m at the <a href="http://pennrelaysonline.com/Results/results.aspx?cy=2024&en=403">Penn Relays</a>.</li>
+</ol>
 
 <a href="index.html">Back to Homepage</a>
 
