--- a/hobby.html
+++ b/hobby.html
@@ -49,7 +49,7 @@
 </head>
 <p>I currently compete for the <a href=https://www.grcrunning.com/eric-beyerle/>Georgetown Running Club</a> located in Washington, D.C. I previously competed for the <a href=https://www.uorunning.com>University of Oregon club team</a> from 2015 to 2021 and competed collegiately for <a href=https://www.tfrrs.org/athletes/3736586/Centre/Eric_Beyerle>Centre College</a> at the NCAA DIII level </p>
 <p>Most of my training from college is available on my <a href="https://running2win.com/">Running2Win profile</a> (you will need to create an account to access). Training from 2019 to present is available on <a href="https://www.strava.com/athletes/35718086">Strava</a>, for the most part. I'll try to move my log to this page in the near future (typed out 28 April 2024; the move will likely coincide with the expiration of my postdoctoral contract at the University of Maryland, College Park on 31 August 2024).</p>
-
+<body style='margin-top:0;margin-left:200;margin-right:200;'>
 <h1>News</h1>
 <h2> June 2024</h2>
 <ol>
