--- a/news.html
+++ b/news.html
@@ -13,6 +13,12 @@
 <body style='margin-top:0;margin-left:200;margin-right:200;'>
 
 <h2 style="color:black">
+September 2024
+</h2>
+<ol>
+	<li style="color:black"> I'm starting a new position as a postdoctoral research associate in Kresten Lindorff-Larsen's group at Københavns Universitet. 
+</ol>
+<h2 style="color:black">
 June 2024
 </h2>
 <ol>
