--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ a:active {
 <img src="images/beyerle_headshot.JPG" /><br>
 </h2>
 	<address>
-		<p><a href="mailto:ebeyerle@umd.edu">Current Email Address</a></p>
-	<p>Institute for Physical Science and Technology<br>
-	8108 Regents Drive<br>
-	College Park, MD 20742-2431<br></p>
+		<p><a href="mailto:eric.beyerle@bio.ku.dk">Current Email Address</a></p>
+	<p>Ole Maaløles Vej 5<br>
+	2200 København<br>
+	Danmark<br></p>
 	</address>	
 
 <h2><u>Some Potentially Useful Links:</u></h2>
