--- a/news.html
+++ b/news.html
@@ -18,7 +18,12 @@ September 2024
 <ol>
 	<li style="color:black"> I'm starting a new position as a postdoctoral research associate in Kresten Lindorff-Larsen's group at Københavns Universitet. 
 </ol>
-<h2 style="color:black">
+<h2 style="color:black"><h2 style="color:black">
+July 2024
+</h2>
+<ol>
+	<li style="color:black">I helped teach a <a href="https://scotch.wangyq.net/">Python bootcamp</a> hosted by Pratyush Tiwary at the University of Maryland, College Park. 
+</ol>
 June 2024
 </h2>
 <ol>
