--- a/hobby.html
+++ b/hobby.html
@@ -53,10 +53,13 @@
 <h1>News</h1>
 <h2>TENTATIVE FALL 2024 TOUR DATES (subject to change and pending health)</h2>
 26 October -- Craft Løbe Cup #1 (Copenhagen, Denmark)
-
+16 November -- Craft Løbe Cup #2 (Odense, Denmark)
+30 November -- Craft Løbe Cup #3 (Aarhus, Denmark)
+14 December -- USATF Club XC Championships (Tacoma, Washington, USA)
+31 December -- Nytårsløbet (Copenhagen, Denmark)
 <h2> October 2024</h2>
 <ol>
-	<li> I placed 14th in the <a href=https://meets.rosterathletics.com/public/competitions/details/results?id=25849&meId=238722#title-anchor/>first round of the Craft Løbe Cup</a> at Kastrup Strandparken in Copenhagen. </li>
+	<li> I placed 14th in the <a href=https://meets.rosterathletics.com/public/competitions/details/results?id=25849&meId=238722#title-anchor/>first round of the Craft Løbe Cup</a> at Kastrup Strandparken in Copenhagen, running a 24:04 for ~7.2km. </li>
 	<li> I've joined the Sparta running club!</li>
 </ol>
 <h2> June 2024</h2>
