--- a/news.html
+++ b/news.html
@@ -13,6 +13,12 @@
 <body style='margin-top:0;margin-left:200;margin-right:200;'>
 
 <h2 style="color:black">
+October 2024
+</h2>
+<ol>
+	<li style="color:black"> A first-author manuscript regarding the inference of critical behavior using generative machine learning was <a href="https://arxiv.org/abs/2410.21034">pre-printed on the arXiv</a>. 
+</ol>
+<h2 style="color:black">
 September 2024
 </h2>
 <ol>
