--- a/hobby.html
+++ b/hobby.html
@@ -52,11 +52,13 @@
 <body style='margin-top:0;margin-left:200;margin-right:200;'>
 <h1>News</h1>
 <h2>TENTATIVE FALL 2024 TOUR DATES (subject to change and pending health)</h2>
-26 October -- Craft Løbe Cup #1 (Copenhagen, Denmark)
-16 November -- Craft Løbe Cup #2 (Odense, Denmark)
-30 November -- Craft Løbe Cup #3 (Aarhus, Denmark)
-14 December -- USATF Club XC Championships (Tacoma, Washington, USA)
-31 December -- Nytårsløbet (Copenhagen, Denmark)
+<ul>
+	<li>26 October -- Craft Løbe Cup #1 (Copenhagen, Denmark)</li>
+	<li>16 November -- Craft Løbe Cup #2 (Odense, Denmark)</li>
+	<li>30 November -- Craft Løbe Cup #3 (Aarhus, Denmark)</li>
+	<li>14 December -- USATF Club XC Championships (Tacoma, Washington, USA)</li>
+	<li>31 December -- Nytårsløbet (Copenhagen, Denmark)</li>
+</ul>
 <h2> October 2024</h2>
 <ol>
 	<li> I placed 14th in the <a href=https://meets.rosterathletics.com/public/competitions/details/results?id=25849&meId=238722#title-anchor/>first round of the Craft Løbe Cup</a> at Kastrup Strandparken in Copenhagen, running a 24:04 for ~7.2km. </li>
