--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ a:active {
                 <a href="hobby.html">Hobby</a>
         </h1>
 </th>
+<th>
+        <h1>
+                <a href="photos.html">Photographs</a>
+        </h1>
+</th>
 
 </tr>
 </table>
