update race results

--- a/hobby.html
+++ b/hobby.html
@@ -55,10 +55,18 @@
 <ul>
 	<li>26 October -- Craft Løbe Cup #1 (Copenhagen, Denmark)</li>
 	<li>16 November -- Craft Løbe Cup #2 (Odense, Denmark)</li>
-	<li>30 November -- Craft Løbe Cup #3 (Aarhus, Denmark)</li>
+	<li><s>30 November -- Craft Løbe Cup #3 (Aarhus, Denmark)</s></li>
 	<li>14 December -- USATF Club XC Championships (Tacoma, Washington, USA)</li>
 	<li>31 December -- Nytårsløbet (Copenhagen, Denmark)</li>
 </ul>
+<h2> December 2024</h2>
+<ol>
+	<li> I finished in 145th place (34:54 for 10k) at the <a href="https://www.rtspt.com/events/usatf/clubxc24/m_open_team.HTML">USATF Club XC Championships</a> outside Tacoma, WA in what is likely my final race for the Georgetown Running Club. </li>
+</ol>
+<h2> November 2024</h2>
+<ol>
+	<li> I DNF'd at the Danish national XC championships in Odense...don't take your Vaporflys to a spike fight! </li>
+</ol>
 <h2> October 2024</h2>
 <ol>
 	<li> I placed 14th in the <a href=https://meets.rosterathletics.com/public/competitions/details/results?id=25849&meId=238722#title-anchor/>first round of the Craft Løbe Cup</a> at Kastrup Strandparken in Copenhagen, running a 24:04 for ~7.2km. </li>
