update race results

--- a/hobby.html
+++ b/hobby.html
@@ -61,6 +61,7 @@
 </ul>
 <h2> December 2024</h2>
 <ol>
+	<li> I finished 10th overall (15:37/15:40 for 5k) at <a href="https://live.ultimate.dk/desktop/front/index.php?eventid=6611&ignoreuseragent=true">Nytårsløbet</a> in Copenhagen on New Year's Eve.
 	<li> I finished in 145th place (34:54 for 10k) at the <a href="https://www.rtspt.com/events/usatf/clubxc24/m_open_team.HTML">USATF Club XC Championships</a> outside Tacoma, WA in what is likely my final race for the Georgetown Running Club. </li>
 </ol>
 <h2> November 2024</h2>
