--- a/hobby.html
+++ b/hobby.html
@@ -51,6 +51,18 @@
 <p>Most of my training from college is available on my <a href="https://running2win.com/">Running2Win profile</a> (you will need to create an account to access). Training from 2019 to present is available on <a href="https://www.strava.com/athletes/35718086">Strava</a>, for the most part. I'll try to move my log to this page in the near future (typed out 28 April 2024; the move will likely coincide with the expiration of my postdoctoral contract at the University of Maryland, College Park on 31 August 2024).</p>
 <body style='margin-top:0;margin-left:200;margin-right:200;'>
 <h1>News</h1>
+<h2>TENTATIVE SPRING 2025 TOUR DATES (subject to change and pending health)</h2>
+<ul>
+	<li>22 Februar -- DM Inde 3000m (Odense, DK) </li>
+	<li>9 Marts -- Nike Spring Run (København, DK) </li>
+	<li>15 Marts -- Craft Løbe Cup #4 (Odense, DK) </li>
+	<li>29 Marts -- Craft Løbe Cup #5 (Aarhus, DK) </li>
+	<li>27 April -- Eugene Tracktown 5k (Eugene, OR)</li>
+</ul>
+<h2> February 2025</h2
+<ol>
+	<li>I finished 7th overall in 8:41.08 in the 3000m at the <a href="https://meets.rosterathletics.com/public/competitions/details/results?id=25885&meId=246925">DM Inde</a> in Odense.</li>
+</ol>>
 <h2>TENTATIVE FALL 2024 TOUR DATES (subject to change and pending health)</h2>
 <ul>
 	<li>26 October -- Craft Løbe Cup #1 (Copenhagen, Denmark)</li>
