--- a/hobby.html
+++ b/hobby.html
@@ -61,8 +61,8 @@
 </ul>
 <h2> February 2025</h2
 <ol>
-	<li>I finished 7th overall in 8:41.08 in the 3000m at the <a href="https://meets.rosterathletics.com/public/competitions/details/results?id=25885&meId=246925">DM Inde</a> in Odense.</li>
-</ol>>
+	<li>I finished 7th overall in 8:41.08 in the 3000m at the <a href="https://meets.rosterathletics.com/public/competitions/details/results?id=25885&meId=246925" target="_blank">DM Inde</a> in Odense.</li>
+</ol>
 <h2>TENTATIVE FALL 2024 TOUR DATES (subject to change and pending health)</h2>
 <ul>
 	<li>26 October -- Craft Løbe Cup #1 (Copenhagen, Denmark)</li>
