--- a/hobby.html
+++ b/hobby.html
@@ -55,10 +55,18 @@
 <ul>
 	<li>22 Februar -- DM Inde 3000m (Odense, DK) </li>
 	<li>9 Marts -- Nike Spring Run (København, DK) </li>
-	<li>15 Marts -- Craft Løbe Cup #4 (Odense, DK) </li>
-	<li>29 Marts -- Craft Løbe Cup #5 (Aarhus, DK) </li>
+	<li><s>15 Marts -- Craft Løbe Cup #4 (Odense, DK) </s></li>
+	<li><s>29 Marts -- Craft Løbe Cup #5 (Aarhus, DK)</s> </li>
 	<li>27 April -- Eugene Tracktown 5k (Eugene, OR)</li>
 </ul>
+<h2>April 2025</h2>
+<ol>
+	<li>I won the <a href=https://www.gotracktownusa.com/news/2025/4/26/2025-eugene-5k-and-duck-dash-inspire-finishers-provide-pancakes>Tracktown 5k</a> in 15:00, part of the Eugene Marathon weekend</li>
+</ol>
+<h2>March 2025</h2>
+<ol>
+	<li>I finished second overall in the 5k (15:19 chip time) at the <a href=https://live.ultimate.dk/desktop/front/index.php?eventid=6737>Nike Spring Run</a> in Copenhagen,</li>
+</ol>
 <h2> February 2025</h2
 <ol>
 	<li>I finished 7th overall in 8:41.08 in the 3000m at the <a href="https://meets.rosterathletics.com/public/competitions/details/results?id=25885&meId=246925" target="_blank">DM Inde</a> in Odense.</li>
