Continuted subdivision of Research page

--- a/prot_dyn.html
+++ b/prot_dyn.html
@@ -67,4 +67,14 @@
         <img src="images/tcf_panel_change_lag_tica.png" alt="Comparison of the LE4PD-3N's ability to model the time correlation functions from simulation (black) for a sampling of residues along the primary sequence of ubiquitin. The predictions of the LE4PD-3N is given in blue while the predictions of tICA are given at various lagtimes, with corresponding colors given in each subfigure legend." class="image2" height="800" width="400"/>
         <figcaption>Figure 3. Comparison of the LE4PD-3N's ability to model the time correlation functions from simulation (black) for a sampling of residues along the primary sequence of ubiquitin. The predictions of the LE4PD-3N is given in blue while the predictions of tICA are given at various lagtimes, with corresponding colors given in each subfigure legend.</figcaption>
     </figure><br><br>
-    <a href="research.html">Back to Research page</a>
+    </p>
+</p>
+</p>
+</p>
+</p>
+<h2>
+<a href="research.html">Back to Research page</a>
+</h2>
+</body>
+</HTML>
+   
