Continued subdivision of Research page

--- a/GB.html
+++ b/GB.html
@@ -45,8 +45,9 @@
             }
     
         </style>
-        <title>Research?</title>
+        <title>Feel the Berne</title>
     </head>
+<h1>Generative Machine Learning the Isotropic-Nematic Phase Transition</h1>
     <body style='margin-top:0;margin-left:200;margin-right:200;'>
 <p>
 My final project in <a href="https://sites.google.com/site/pratyushtiwary/">Pratyush Tiwary's</a> group at IPST involved the use of a specific type of generative machine learning model
