--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
 <h2><a href="prot_dyn.html">Equilibrium Dynamics of Proteins</a></h2>
 <figure>
 	<img src="images/ensemble_HIV-1_protease.png alt="Conformational ensemble of HIV-1 protease" class="image1" height="500" width="800"/>
-	<figcaption>Conformational ensemble of HIV-1 protease (PDB ID: 3TTP) backbone atoms harvested from a one microsecond equilibrium molecular dynamics simulation run at constant temperature and pressure.</figcaption>
+	<figcaption>Conformational ensemble of HIV-1 protease (PDB ID: 3TTP) backbone atoms harvested from a one microsecond equilibrium molecular dynamics simulation run at constant temperature and pressure. Each backbone is colored based on timestep in the ensemble.</figcaption>
 </figure><br><br>
 <h2><a href="dApdA.html">Conformational Dynamics of a Single-Stranded DNA Dinucleotide</a></h2>
 
