Continued subdivision of research page

--- a/research.html
+++ b/research.html
@@ -61,7 +61,12 @@
 <h2><a href="buckyball.html">Machine Learning and Rare Events</a></h2>
 
 <h2><a href="GB.html">Generative Machine Learning the Isotropic-Nematic Phase Transition</a></h2>
-
+<figure>
+	<img src="images/GB_phases.png" alt="Isotropic (left) and nematic (right) phases of a melt of Gay-Berne ellipsoids" class="image1" height="500" width="500"/>
+	<figcaption>Isotropic (left, a) and nematic (right, b) phases of a melt of Gay-Berne ellipsoids. In b), the local orientations of each ellipsoid relative to the global orientation vector
+		(blue, dashed arrow) are indicated with the black arrows for a few sample ellipsoids.
+	</figcaption>
+</figure><br><br>
 <h2>
 <a href="index.html">Back to Homepage</a>
 </h2>
