--- a/news.html
+++ b/news.html
@@ -11,7 +11,13 @@
 </style>
 </head>
 <body style='margin-top:0;margin-left:200;margin-right:200;'>
-
+<h2 style="color:black">
+July 2025
+</h2>
+	<ol>
+	<li style="color:black">I helped teach a <a href="https://scotch.wangyq.net/">Python bootcamp</a> hosted by Pratyush Tiwary at the University of Maryland, College Park the second year in a row.</li>	
+	<li style="color:black">My first-author publication on learning the isotropic-nematic phase transition in an analytical liquid crystalline system has been <a href="https://journals.aps.org/prl/accepted/10.1103/1wdj-ym3s">accepted for publication</a> at <emph>Phys. Rev. Lett.</emph></li>	
+	</ol>
 <h2 style="color:black">
 October 2024
 </h2>
