--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ a:active {
 </h2>
 	<address>
 		<p><a href="mailto:eric.beyerle@bio.ku.dk">Current Email Address</a></p>
-	<p>Ole Maaløles Vej 5<br>
+	<p>Ole Maaløes Vej 5<br>
 	2200 København<br>
 	Danmark<br></p>
 	</address>	
