All the news that's fit to print

--- a/news.html
+++ b/news.html
@@ -12,6 +12,13 @@
 </head>
 <body style='margin-top:0;margin-left:200;margin-right:200;'>
 <h2 style="color:black">
+August 2025
+</h2>
+        <ol>
+        <li style="color:black"> I presented a talk at the <a href="https://acs.digitellinc.com/live/35/page/1204?speakers=380300&window-c82ls1&window-4867xx">ACS Fall meeting in Washington, D.C.</a> The title of the talk is "Dynamics and Kinetics Directly from AlphaFold2," and it summarized the pre-printed manuscript that is the subject of the previous bulletpoint in this news archive. </li>  
+        <li style="color:black">I pre-printed <a href="https://arxiv.org/abs/2508.12060">a manuscript</a> co-authored with Akashnathan Aranganathan (University of Maryland, College Park) to the arXiv. The manuscript focuses on generating timescales for dynamics encoded by machine-learned conformational ensembles of proteins. (</emph></li>
+        </ol>
+<h2 style="color:black">
 July 2025
 </h2>
 	<ol>
