--- a/news.html
+++ b/news.html
@@ -12,6 +12,12 @@
 </head>
 <body style='margin-top:0;margin-left:200;margin-right:200;'>
 <h2 style="color:black">
+September 2025
+</h2>
+<ol>
+	<li style="color:black"> I attended the <a href="https://isbuc.ku.dk/calendar/junior-isbuc-summer-camp/?utm_campaign=BIOupdate_20250618_ENG&utm_medium=email&utm_source=Main+list+-+Live+data"> junior ISBUC summer retreat</a> on the (tropical) island of (H)[Vv]en.</li>
+</ol>
+<h2 style="color:black">
 August 2025
 </h2>
         <ol>
