--- a/photos/copenhagen.html
+++ b/photos/copenhagen.html
@@ -58,5 +58,10 @@
             <figcaption>The west side of the Langeline at night</figcaption>
     </figure>
     <br><br>
+    <figure>
+            <img src="copenhagen/isbuc.jpg" alt="Group photo from the summer ISBUC junior retreat on the tropical island of Hven" class="image1"/>
+            <figcaption>Group photo from the summer ISBUC junior retreat on the tropical island of Hven</figcaption>
+    </figure>
+    <br><br>
 
     <h2><a href="../photos.html">Back to Photos menu</a></h2>
