Add AF2-dynamics link to research.html

--- a/research.html
+++ b/research.html
@@ -67,6 +67,8 @@
 		(blue, dashed arrow) are indicated with the black arrows for a few sample ellipsoids.
 	</figcaption>
 </figure><br><br>
+<h2><a href="af2-dyn.html">Inferring kinetics and dynamics from machine-learned protein ensembles</a></h2>
+<br><br>
 <h2>
 <a href="index.html">Back to Homepage</a>
 </h2>
