--- a/news.html
+++ b/news.html
@@ -12,6 +12,12 @@
 </head>
 <body style='margin-top:0;margin-left:200;margin-right:200;'>
 <h2 style="color:black">
+January 2026
+</h2>
+<ol>
+<li style="color:black"> I was invited to deliver the <a href="https://chemistry.georgetown.edu/events/">chemistry seminar at Georgetown University</a>.</li>
+</ol>
+<h2 style="color:black">
 September 2025
 </h2>
 <ol>
