--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ a:active {
 </tr>
 </table>
 <h2>
-<img src="images/beyerle_headshot.JPG" /><br>
+<img src="images/beyerle_sweden.JPG" /><br>
 </h2>
 	<address>
 		<p><a href="mailto:eric.beyerle@bio.ku.dk">Current Email Address</a></p>
