Fix typo in most recent entry for news.html

--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@ February 2026
 </h2>
 <ol>
 <li style="color:black"> Two days later, I gave a thematically similar talk (with the same title but some altered content and focus) to the AI for drug discovery group (I think?) at Genentech. I was invited by former UMD colleague <a href="https://bodhivani.github.io"</a> Bodhi Vani</a>.</li>
-<li style="color:black"> I was invited to deliver a <a href="images/IMG_3434.png">seminar at UCSF titled "Some Essential Coordinates for Biology"</a>.</li>
+<li style="color:black"> I was invited to deliver a <a href="images/IMG_3434.png">seminar at UCSF</a> titled "Some Essential Coordinates for Biology".</li>
 </ol>
 <h2 style="color:black">
 January 2026
